<resources>
    <string name="app_name">IntRest-agent-android</string>
    <string name="sign_in">Sign in</string>
    <string name="email_placeholder">example@intrest.com</string>
    <string name="email_label">Email Address</string>
    <string name="email_error">Email is not valid</string>
    <string name="password_error">Password is not valid</string>
    <string name="password_label">Password</string>
    <string name="password_placeholder">*******</string>
    <string name="login">Login</string>
    <string name="username_too_short">Username is too short</string>
    <string name="password_too_short">Password is too short</string>
    <string name="success">success</string>
    <string name="validation_error">Validation error</string>
    <string name="choose_your_profile">Choose your restaurant profile</string>
    <string name="resturant_profile">Resturant Profile</string>
    <string name="orders">Orders</string>
    <string name="order_history">Order History</string>
    <string name="menu_management">Menu Management</string>
    <string name="delivery_cost">Delivery Cost</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="incoming">Incoming</string>
    <string name="deliver">Deliver</string>
    <string name="serial_number">Sn</string>
    <string name="order_name">Order name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="total_price">Total price</string>
    <string name="customer_contact">Customer contact</string>
    <string name="accept_order">Accept order</string>
    <string name="reject_order">Reject order</string>
    <string name="price_adjustment">Price adjustment</string>
    <string name="delay_order">Delay order</string>
    <string name="prepared">Prepared</string>
    <string name="deliver_up_by_courier">Deliver by courier</string>
    <string name="pick_up_by_customer">Pickup by customer</string>
    <string name="there_are_no_order">There are no %1$s orders</string>
    <string name="tracking_num">Tracking Num</string>
    <string name="tracking_num_is">Tracking number: </string>
    <string name="customer">Customer</string>
    <string name="order_time">Order Time</string>
    <string name="delivery_type">Delivery type</string>
    <string name="details">Details</string>
    <string name="reject_reason">Reject reason</string>
    <string name="other_reason">Other reason</string>
    <string name="busy">Busy</string>
    <string name="closing_soon">Closing soon</string>
    <string name="insufficent_quantity">"Insufficent quantity "</string>
    <string name="too_far_address">"Too far address "</string>
    <string name="unavailable_ingredient">"Unavailable ingredient "</string>
    <string name="message">Message</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="delay_dialog_description">You can delay order preparation time from 5 to 30 minutes</string>
    <string name="adjustment_price">Adjusment amount</string>
    <string name="dollar_sign">$</string>
    <string name="hashtag_sign">#</string>
    <string name="tax_rate">Tax rate</string>
    <string name="percent_sign">%</string>
    <string name="adjustment_description">Adjustment description</string>
    <string name="add_new_adjustment">Add new adjustment</string>
    <string name="error_accrued_try_again">Error accrued try again</string>
    <string name="there_are_no_history_order">There are no history orders</string>
    <string name="menu">Menu</string>
    <string name="choose_your_menu">Choose a menu</string>
    <string name="preparation_time">Preparation time</string>
    <string name="food_name">Food name</string>
    <string name="available">Available</string>
    <string name="adjustment_amount">Adjustment amount</string>
    <string name="categories">Categories</string>
    <string name="menu_is_empty">Menu is empty</string>
    <string name="time_in_minutes">Time in minutes</string>
    <string name="costs">Costs</string>
    <string name="range_radius">Range radius</string>
    <string name="action">Action</string>
    <string name="add_new_item">Add new item</string>
    <string name="km">km</string>
    <string name="update">Update</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_to_delete">Are you sure to delet this Cost?</string>
    <string name="stop_receiving_orders">Stop receiving orders</string>
    <string name="upper_radius">Upper radius</string>
    <string name="lower_radius">Lower Radius</string>
    <string name="cost">Cost</string>
    <string name="add">Add</string>
    <string name="edit_item">Edit item</string>
    <string name="apply_changes">Apply  changes</string>
    <string name="common_error_message">An error accoured</string>
    <string name="error">Error</string>
    <string name="action_succedd">Action has been done successfully</string>
    <string name="delivery_note">"Delivery note: "</string>
    <string name="time_adjustment">Time adjustment</string>
    <string name="serve_type">Serve Type</string>
    <string name="you_can_change_time">You can change order preparation time</string>
    <string name="set_time">Set time</string>
    <string name="set_price">Set price</string>
    <string name="order_details">Order Details</string>
    <string name="no_item_here">No item here</string>
</resources>