<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.mindlab.intrest_agent_android.presentation.home.HomeViewModel" />
    </data>

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context=".presentation.home.HomeActivity">

        <FrameLayout
            android:id="@+id/left_menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/blue_800"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="25dp"
                    app:srcCompat="@drawable/ic_logo" />

                <LinearLayout
                    android:id="@+id/orders"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/home_activity_menu_background_selector"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        app:srcCompat="@drawable/ic_order_selector" />

                    <TextView
                        android:id="@+id/txt_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/orders"
                        android:textColor="@color/gray_300"
                        android:textSize="11sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/home_activity_menu_background_selector"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        app:srcCompat="@drawable/ic_order_selector" />

                    <TextView
                        android:id="@+id/txt_history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/order_history"
                        android:textColor="@color/gray_300"
                        android:textSize="11sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/home_activity_menu_background_selector"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp">

                    <ImageView
                        android:id="@+id/img_menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        app:srcCompat="@drawable/ic_menu_selector" />

                    <TextView
                        android:id="@+id/txt_menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/menu_management"
                        android:textColor="@color/gray_300"
                        android:textSize="11sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/home_activity_menu_background_selector"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_cost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        app:srcCompat="@drawable/ic_cost_selector" />

                    <TextView
                        android:id="@+id/txt_cost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/delivery_cost"
                        android:textColor="@color/gray_300"
                        android:textSize="11sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    app:srcCompat="@drawable/ic_logout" />

                <TextView
                    android:id="@+id/txt_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/logout"
                    android:textColor="@color/gray_300"
                    android:textSize="11sp" />
            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@{viewModel.name}" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/stop_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/stop_receiving_orders"
                    android:theme="@style/SwitchStyle" />

            </LinearLayout>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragmentContainerView"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:defaultNavHost="true"
                app:navGraph="@navigation/main_graph" />


        </LinearLayout>
    </LinearLayout>
</layout>
